# jean

./: CONTRIBUTING.md  Dockerfile.server-runtime  README.md  REMOTE_SERVERS_PLAN.md  index.html  package.json
.github/workflows/: preflight.yml  release.yml  server-release.yml
crates/jean-core/: Cargo.toml
crates/jean-core/src/: capabilities.rs  capabilities_generated.rs  chat.rs  commandcode.rs  contexts.rs  git.rs  github.rs  lib.rs  persistence.rs  projects.rs  server.rs  sessions.rs
docs/: headless-server.md
docs/developer/: architecture-guide.md  model-catalog.md  releases.md  remote-servers.md
docs/tasks-todo/: task-x-platform-specific-ci-tests.md
lima/: jean-headless.yaml
scripts/: build-appimage.sh  bump-version.js  bump-version.test.mjs  server-ci-assets.test.mjs  test-remote-provision-lima.mjs  test-remote-tunnel-recovery.mjs
src/: App.tsx  App.web-connecting-overlay.test.ts  App.web-reload-regression.test.ts  index.theme-bootstrap.test.ts
src-server/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backend_runtime.rs  jean_mcp_core.rs  lib.rs
src/hooks/: use-command-context.ts  use-window-effect.ts  use-zoom.test.tsx  use-zoom.ts  useAutoConnectRemoteServers.test.tsx  useAutoConnectRemoteServers.ts  useBackgroundInvestigation.ts  useLinuxFileDrop.ts  useMainWindowEventListeners.ts  useProjectBackendHandle.ts  useQueueProcessor.test.tsx  useQueueProcessor.ts  useSessionStatePersistence.ts  useTerminal.ts  useUIStatePersistence.test.tsx  useUIStatePersistence.ts
(+206 files in other folders)
