[package]
name = "jean-core"
version = "0.1.65"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
dirs = "5"
futures-util = "0.3"
ignore = "0.4"
log = "0.4"
libc = "0.2"
portable-pty = "0.8"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
rust-embed = { version = "8", features = ["debug-embed"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = "0.7"
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "cors"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tokio-tungstenite = "0.26"
tower = { version = "0.5", features = ["util"] }
